--- a/tutorials/klusterai-api/uploads-api.ipynb
+++ b/tutorials/klusterai-api/uploads-api.ipynb
@@ -5,7 +5,7 @@
    "id": "intro-heading",
    "metadata": {},
    "source": [
-    "# Large File Uploads with Kluster.ai API\n",
+    "# Large file uploads with kluster.ai API\n",
     "\n",
     "[![Open in Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/kluster-ai/klusterai-cookbook/blob/main/examples/uploads-api.ipynb)"
    ]
@@ -15,11 +15,11 @@
    "id": "intro-description",
    "metadata": {},
    "source": [
-    "When working with large datasets for AI model training or batch inference, you may need to upload files several gigabytes in size. For these scenarios, Kluster.ai provides a multipart upload API that allows you to split your large files into smaller chunks and upload them efficiently.\n",
+    "When working with large datasets for AI model training or batch inference, you may need to upload files several gigabytes in size. For these scenarios, kluster.ai provides a multipart upload API that allows you to split your large files into smaller chunks and upload them efficiently.\n",
     "\n",
     "This tutorial demonstrates how to:\n",
     "1. Split a large file into multiple parts\n",
-    "2. Upload each part using the Kluster.ai Uploads API\n",
+    "2. Upload each part using the kluster.ai Uploads API\n",
     "3. Complete the upload process to create a usable File object\n",
     "4. Use the uploaded file for a batch inference job\n",
     "\n",
@@ -35,7 +35,7 @@
     "\n",
     "Before getting started, ensure you have the following:\n",
     "\n",
-    "- **A kluster.ai account** - sign up on the [Kluster.ai platform](https://platform.kluster.ai/signup) if you don't have one\n",
+    "- **A kluster.ai account** - sign up on the [kluster.ai platform](https://platform.kluster.ai/signup) if you don't have one\n",
     "- **A kluster.ai API key** - after signing in, go to the [**API Keys**](https://platform.kluster.ai/apikeys) section and create a new key"
    ]
   },
@@ -52,15 +52,23 @@
    "id": "setup-description",
    "metadata": {},
    "source": [
-    "Let's start by installing the necessary libraries and setting up our environment. We'll use the OpenAI Python library to interact with the Kluster.ai API (since Kluster.ai API is OpenAI compatible)."
+    "Let's start by installing the necessary libraries and setting up our environment. We'll use the OpenAI Python library to interact with the kluster.ai API (since kluster.ai API is OpenAI compatible)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "install-deps",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
    "source": [
     "%pip install -q openai tqdm"
    ]
@@ -70,19 +78,27 @@
    "id": "api-key-setup",
    "metadata": {},
    "source": [
-    "In this notebook, we'll use Python's `getpass` module to input the API key securely. After execution, please provide your unique Kluster.ai API key (ensure no spaces)."
+    "In this notebook, we'll use Python's `getpass` module to input the API key securely. After execution, please provide your unique kluster.ai API key (ensure no spaces)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "get-api-key",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter your kluster.ai API key:  ········\n"
+     ]
+    }
+   ],
    "source": [
     "from getpass import getpass\n",
     "\n",
-    "api_key = getpass(\"Enter your Kluster.ai API key: \")"
+    "api_key = getpass(\"Enter your kluster.ai API key: \")"
    ]
   },
   {
@@ -95,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "imports",
    "metadata": {},
    "outputs": [],
@@ -116,12 +132,12 @@
    "id": "client-init",
    "metadata": {},
    "source": [
-    "Initialize the OpenAI client by pointing it to the Kluster.ai endpoint and passing your API key:"
+    "Initialize the OpenAI client by pointing it to the kluster.ai endpoint and passing your API key:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "setup-client",
    "metadata": {},
    "outputs": [],
@@ -138,17 +154,25 @@
    "id": "sample-data-heading",
    "metadata": {},
    "source": [
-    "## Sample Data Creation (Optional)\n",
+    "## Sample data creation (optional)\n",
     "\n",
     "If you don't already have a large JSONL file for testing, you can create one using the code below. This will generate a synthetic dataset of text prompts that we'll use for batch inference later."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "sample-data",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Created sample file 'data/sample_large_file.jsonl' with 1000 prompts (0.34 MB)\n"
+     ]
+    }
+   ],
    "source": [
     "def create_sample_jsonl(filename, num_samples=1000):\n",
     "    \"\"\"Create a sample JSONL file with text prompts for batch inference.\"\"\"\n",
@@ -191,7 +215,7 @@
    "id": "multipart-heading",
    "metadata": {},
    "source": [
-    "## Multipart Upload Process\n",
+    "## Multipart upload process\n",
     "\n",
     "Now, let's implement the multipart upload process. We'll break this down into several steps:\n",
     "\n",
@@ -205,17 +229,26 @@
    "id": "step1-heading",
    "metadata": {},
    "source": [
-    "### Step 1: Create the Upload Object\n",
+    "### Create the upload object\n",
     "\n",
     "First, we need to create an Upload object that will serve as a container for all the parts we're about to upload."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "create-upload",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Created upload with ID: 680290f48cc246574d9821f0\n",
+      "Upload will expire at: 2025-04-18 13:50:44\n"
+     ]
+    }
+   ],
    "source": [
     "def create_upload(client, filename, file_size, purpose=\"batch\", mime_type=\"application/jsonl\"):\n",
     "    \"\"\"Create an Upload object to which we can add parts.\"\"\"\n",
@@ -242,17 +275,60 @@
    "id": "step2-heading",
    "metadata": {},
    "source": [
-    "### Step 2: Split the File and Upload Parts\n",
+    "### Split the file and upload parts\n",
     "\n",
     "Now, we'll split the file into chunks and upload each chunk as a Part. According to the documentation, each Part can be at most 64 MB, so we'll make sure our chunks don't exceed that limit."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "upload-parts",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Uploading file in 2 parts (part size: 0.17 MB)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Uploading parts:  50%|██████████████▌              | 1/2 [00:00<00:00,  2.07it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Part 1/2 uploaded with ID: 680290f50969ab67de178cc6\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Uploading parts: 100%|█████████████████████████████| 2/2 [00:00<00:00,  2.30it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Part 2/2 uploaded with ID: 680290f501b9ebf23af9dd23\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "def split_and_upload_parts(client, upload_id, file_path, num_parts=2):\n",
     "    \"\"\"Split a file into a specific number of chunks and upload each chunk as a Part.\"\"\"\n",
@@ -301,10 +377,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "calc-md5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File MD5 checksum: 69888e6132fa493024089b877d812c89\n"
+     ]
+    }
+   ],
    "source": [
     "def calculate_md5(file_path):\n",
     "    \"\"\"Calculate the MD5 checksum of a file.\"\"\"\n",
@@ -324,17 +408,27 @@
    "id": "step3-heading",
    "metadata": {},
    "source": [
-    "### Step 3: Complete the Upload\n",
+    "### Complete the upload\n",
     "\n",
     "Finally, we'll complete the Upload process by providing the ordered list of Part IDs."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "complete-upload",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Upload completed successfully!\n",
+      "Status: completed\n",
+      "File ID: 680290f68225fce1bc953669\n"
+     ]
+    }
+   ],
    "source": [
     "def complete_upload(client, upload_id, parts):\n",
     "    \"\"\"Complete the Upload process with the ordered list of Part IDs.\"\"\"\n",
@@ -365,17 +459,26 @@
    "id": "batch-job-heading",
    "metadata": {},
    "source": [
-    "## Using the Uploaded File for Batch Inference\n",
+    "## Using the uploaded file for batch inference\n",
     "\n",
     "Now that we've successfully uploaded our large file, let's use it to create a batch inference job."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "create-batch-job",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Batch job created with ID: 680290f6186ab8d64b46ed99\n",
+      "Status: pre_schedule\n"
+     ]
+    }
+   ],
    "source": [
     "def create_batch_job(client, file_id):\n",
     "    \"\"\"Create a batch job using the uploaded file.\"\"\"\n",
@@ -398,7 +501,7 @@
    "id": "monitor-job-heading",
    "metadata": {},
    "source": [
-    "### Monitor Batch Job Progress\n",
+    "### Monitor batch job progress\n",
     "\n",
     "Let's monitor the progress of our batch job. We'll check the status every 10 seconds until the job is completed."
    ]
@@ -408,7 +511,17 @@
    "execution_count": null,
    "id": "monitor-batch-job",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Job status: in_progress - Progress: 241/1000'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "def monitor_batch_job(client, batch_job_id, check_interval=10):\n",
     "    \"\"\"Monitor the progress of a batch job until it's completed.\"\"\"\n",
@@ -448,7 +561,7 @@
    "id": "results-heading",
    "metadata": {},
    "source": [
-    "### Retrieve and Process Results\n",
+    "### Retrieve and process results\n",
     "\n",
     "Once the batch job is completed, we can retrieve and process the results."
    ]
@@ -514,7 +627,7 @@
    "id": "cancel-upload-heading",
    "metadata": {},
    "source": [
-    "## Handling Failed Uploads\n",
+    "## Handling failed uploads\n",
     "\n",
     "Sometimes, uploads may fail for various reasons. In such cases, you may want to cancel the upload and start over. Here's how to cancel an upload:"
    ]
@@ -543,9 +656,9 @@
    "id": "best-practices-heading",
    "metadata": {},
    "source": [
-    "## Best Practices and Tips\n",
+    "## Best practices and tips\n",
     "\n",
-    "Here are some best practices and tips for using the Kluster.ai Uploads API effectively:\n",
+    "Here are some best practices and tips for using the kluster.ai Uploads API effectively:\n",
     "\n",
     "- **Optimal part size** - choose an appropriate part size based on your network conditions. While the API allows parts up to 64 MB, you might want to use smaller parts if your network is unstable\n",
     "- **Parallel uploads** - for very large files, consider uploading parts in parallel to speed up the process\n",
@@ -563,13 +676,13 @@
     "\n",
     "In this tutorial, we've learned how to:\n",
     "\n",
-    "1. Create an Upload object using the Kluster.ai API\n",
+    "1. Create an Upload object using the kluster.ai API\n",
     "2. Split a large file into smaller parts and upload each part\n",
     "3. Complete the upload process to create a usable File object\n",
     "4. Use the uploaded file for a batch inference job\n",
     "5. Monitor the batch job progress and retrieve results\n",
     "\n",
-    "This approach allows you to efficiently upload and process large datasets with Kluster.ai, making it an invaluable tool for your AI workflows."
+    "This approach allows you to efficiently upload and process large datasets with kluster.ai, making it an invaluable tool for your AI workflows."
    ]
   },
   {
@@ -577,7 +690,7 @@
    "id": "advanced-section",
    "metadata": {},
    "source": [
-    "## Advanced: Implementing Parallel Uploads\n",
+    "## Advanced: implementing parallel uploads\n",
     "\n",
     "For very large files, uploading parts sequentially might take a long time. You can implement a version that uploads parts in parallel using Python's `concurrent.futures` module. This approach creates a thread pool that allows multiple parts to be uploaded simultaneously, significantly reducing the total upload time for large files over high-bandwidth connections.\n",
     "\n",
