--- a/tutorials/klusterai-api/uploads-api.ipynb
+++ b/tutorials/klusterai-api/uploads-api.ipynb
@@ -231,7 +231,7 @@
    "source": [
     "### Create the upload object\n",
     "\n",
-    "First, we need to create an Upload object that will serve as a container for all the parts we're about to upload."
+    "First, we need to create an [upload object](https://docs.kluster.ai/api-reference/reference/#upload-object) that will serve as a container for all the parts we're about to upload."
    ]
   },
   {
@@ -244,8 +244,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Created upload with ID: 680290f48cc246574d9821f0\n",
-      "Upload will expire at: 2025-04-18 13:50:44\n"
+      "Created upload with ID: 6802945a0969ab67de17a63f\n",
+      "Upload will expire at: 2025-04-18 14:05:14\n"
      ]
     }
    ],
@@ -277,7 +277,7 @@
    "source": [
     "### Split the file and upload parts\n",
     "\n",
-    "Now, we'll split the file into chunks and upload each chunk as a Part. According to the documentation, each Part can be at most 64 MB, so we'll make sure our chunks don't exceed that limit."
+    "Now, we'll split the file into chunks and upload each chunk as a part. According to the documentation, each part can be at most 64 MB, so we'll make sure our chunks don't exceed that limit."
    ]
   },
   {
@@ -297,28 +297,28 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Uploading parts:  50%|██████████████▌              | 1/2 [00:00<00:00,  2.07it/s]"
+      "Uploading parts:  50%|██████████████▌              | 1/2 [00:00<00:00,  1.90it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Part 1/2 uploaded with ID: 680290f50969ab67de178cc6\n"
+      "Part 1/2 uploaded with ID: 6802945a01b9ebf23af9f563\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Uploading parts: 100%|█████████████████████████████| 2/2 [00:00<00:00,  2.30it/s]"
+      "Uploading parts: 100%|█████████████████████████████| 2/2 [00:00<00:00,  2.37it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Part 2/2 uploaded with ID: 680290f501b9ebf23af9dd23\n"
+      "Part 2/2 uploaded with ID: 6802945aec668b6183defdd1\n"
      ]
     },
     {
@@ -410,7 +410,7 @@
    "source": [
     "### Complete the upload\n",
     "\n",
-    "Finally, we'll complete the Upload process by providing the ordered list of Part IDs."
+    "Finally, we'll complete the upload process by providing the ordered list of part IDs."
    ]
   },
   {
@@ -425,7 +425,7 @@
      "text": [
       "Upload completed successfully!\n",
       "Status: completed\n",
-      "File ID: 680290f68225fce1bc953669\n"
+      "File ID: 6802945b8225fce1bc955193\n"
      ]
     }
    ],
@@ -474,7 +474,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Batch job created with ID: 680290f6186ab8d64b46ed99\n",
+      "Batch job created with ID: 6802945b186ab8d64b470716\n",
       "Status: pre_schedule\n"
      ]
     }
@@ -508,14 +508,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "monitor-batch-job",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Job status: in_progress - Progress: 241/1000'"
+       "'Job completed!'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'Output file ID: 680294c30c2f5a2a50225b20'"
       ]
      },
      "metadata": {},
@@ -563,15 +572,40 @@
    "source": [
     "### Retrieve and process results\n",
     "\n",
-    "Once the batch job is completed, we can retrieve and process the results."
+    "Once the batch job is completed, we can retrieve and process the results. Specifically, we’ll download the output file returned by the API and parse each line‑delimited JSON record into python objects, making it easy to inspect, validate, and visualize every response produced by the batch run."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "retrieve-results",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Retrieved 1000 results\n",
+      "\n",
+      "Sample of results:\n",
+      "\n",
+      "Result 1 (Custom ID: sample-0):\n",
+      "Climate change refers to the long-term warming of the planet due to an increase in average global temperatures. This is primarily caused by human activities such as burning fossil fuels (e.g., coal, oil, and gas), deforestation, and industrial processes, which release large amounts of carbon dioxide and other greenhouse gases into the atmosphere, trapping heat and leading to rising temperatures, more extreme weather events, and altered ecosystems.\n",
+      "\n",
+      "Result 2 (Custom ID: sample-1):\n",
+      "Renewable energy refers to the energy generated from natural resources that can be replenished over time, such as sunlight, wind, rain, and geothermal heat. Examples of renewable energy sources include solar power, wind power, hydroelectric power, and biomass. These energy sources are sustainable, non-polluting, and endless, providing a cleaner alternative to fossil fuels and reducing greenhouse gas emissions that contribute to climate change.\n",
+      "\n",
+      "Result 3 (Custom ID: sample-2):\n",
+      "Space exploration is the study and investigation of outer space, including planets, galaxies, and celestial objects. It involves sending spacecraft, such as satellites, probes, and manned missions, to gather data and conduct research on the characteristics of space and its various components. The primary goals of space exploration include expanding human knowledge, improving understanding of the universe, and potentially utilizing space resources for the benefit of humanity.\n",
+      "\n",
+      "Result 4 (Custom ID: sample-3):\n",
+      "Quantum computing is a revolutionary technology that uses the principles of quantum mechanics to perform calculations and operations on data. Unlike classical computers, which use binary bits (0s and 1s), quantum computers use quantum bits or qubits, which can exist in multiple states simultaneously, allowing for exponentially faster processing of complex calculations and simulations. This enables quantum computers to solve problems that are currently unsolvable or require an unfeasible amount of time to solve on classical computers.\n",
+      "\n",
+      "Result 5 (Custom ID: sample-4):\n",
+      "Artificial intelligence (AI) refers to the development of computer systems that can perform tasks typically requiring human intelligence, such as learning, problem-solving, decision-making, and perception. These systems use algorithms and data to mimic human-like behavior, enabling machines to process and analyze vast amounts of information, recognize patterns, and make predictions or take actions autonomously.\n"
+     ]
+    }
+   ],
    "source": [
     "def retrieve_batch_results(client, job):\n",
     "    \"\"\"Retrieve and parse the results of a completed batch job.\"\"\"\n",
@@ -634,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "cancel-upload",
    "metadata": {},
    "outputs": [],
@@ -669,24 +703,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "summary-heading",
-   "metadata": {},
-   "source": [
-    "## Summary\n",
-    "\n",
-    "In this tutorial, we've learned how to:\n",
-    "\n",
-    "1. Create an Upload object using the kluster.ai API\n",
-    "2. Split a large file into smaller parts and upload each part\n",
-    "3. Complete the upload process to create a usable File object\n",
-    "4. Use the uploaded file for a batch inference job\n",
-    "5. Monitor the batch job progress and retrieve results\n",
-    "\n",
-    "This approach allows you to efficiently upload and process large datasets with kluster.ai, making it an invaluable tool for your AI workflows."
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "advanced-section",
    "metadata": {},
    "source": [
@@ -699,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "parallel-upload",
    "metadata": {},
    "outputs": [],
@@ -771,10 +787,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "f4009270-6cf0-4b19-98b0-ae262d1b626e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "## PARALLEL UPLOAD DEMONSTRATION ##\n",
+      "\n",
+      "Creating a new upload for parallel demonstration...\n",
+      "Created upload with ID: 680294cc8225fce1bc95551c\n",
+      "Upload will expire at: 2025-04-18 14:07:08\n",
+      "\n",
+      "Uploading parts in parallel...\n",
+      "Uploading file in 2 parts using up to 2 parallel workers\n",
+      "Part 2/2 uploaded with ID: 680294cc186ab8d64b470a84\n",
+      "Part 1/2 uploaded with ID: 680294ccd82e57647b83d47c\n",
+      "\n",
+      "Completing the parallel upload...\n",
+      "Upload completed successfully!\n",
+      "Status: completed\n",
+      "File ID: 680294cc8cc246574d983f58\n",
+      "\n",
+      "Parallel upload demonstration completed!\n",
+      "Parallel uploaded file ID: 680294cc8cc246574d983f58\n",
+      "Note: This file was uploaded just for demonstration purposes.\n"
+     ]
+    }
+   ],
    "source": [
     "# Advanced: Demonstrating Parallel Uploads\n",
     "\n",
@@ -797,6 +841,24 @@
     "\n",
     "# We won't use this file for further processing, it was just for demonstration\n",
     "print(\"Note: This file was uploaded just for demonstration purposes.\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "summary-heading",
+   "metadata": {},
+   "source": [
+    "## Conclusion\n",
+    "\n",
+    "In this tutorial, we've learned how to:\n",
+    "\n",
+    "1. Create an Upload object using the kluster.ai API\n",
+    "2. Split a large file into smaller parts and upload each part\n",
+    "3. Complete the upload process to create a usable File object\n",
+    "4. Use the uploaded file for a batch inference job\n",
+    "5. Monitor the batch job progress and retrieve results\n",
+    "\n",
+    "This approach allows you to efficiently upload and process large datasets with kluster.ai, making it an invaluable tool for your AI workflows."
    ]
   }
  ],
