--- a/tutorials/klusterai-api/uploads-api.ipynb
+++ b/tutorials/klusterai-api/uploads-api.ipynb
@@ -15,11 +15,11 @@
    "id": "intro-description",
    "metadata": {},
    "source": [
-    "When working with large datasets for AI model training or batch inference, you may need to upload files several gigabytes in size. For these scenarios, kluster.ai provides a multipart upload API that allows you to split your large files into smaller chunks and upload them efficiently.\n",
+    "When working with large datasets for AI model training or batch inference, you may need to upload files several gigabytes in size. For these scenarios, [kluster.ai](https://www.kluster.ai/) provides a multipart upload API that allows you to split your large files into smaller chunks and upload them efficiently.\n",
     "\n",
     "This tutorial demonstrates how to:\n",
     "1. Split a large file into multiple parts\n",
-    "2. Upload each part using the kluster.ai Uploads API\n",
+    "2. Upload each part using the kluster.ai uploads API\n",
     "3. Complete the upload process to create a usable File object\n",
     "4. Use the uploaded file for a batch inference job\n",
     "\n",
@@ -219,9 +219,9 @@
     "\n",
     "Now, let's implement the multipart upload process. We'll break this down into several steps:\n",
     "\n",
-    "1. Create the Upload object\n",
-    "2. Split the file into chunks and upload each chunk as a Part\n",
-    "3. Complete the Upload process"
+    "1. Create the [Upload object](https://docs.kluster.ai/api-reference/reference/#upload-object)\n",
+    "2. Split the file into chunks and upload each chunk as a part\n",
+    "3. Complete the upload process"
    ]
   },
   {
@@ -231,7 +231,7 @@
    "source": [
     "### Create the upload object\n",
     "\n",
-    "First, we need to create an [upload object](https://docs.kluster.ai/api-reference/reference/#upload-object) that will serve as a container for all the parts we're about to upload."
+    "First, we need to create an [Upload object](https://docs.kluster.ai/api-reference/reference/#upload-object) that will serve as a container for all the parts we're about to upload."
    ]
   },
   {
@@ -244,8 +244,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Created upload with ID: 6802945a0969ab67de17a63f\n",
-      "Upload will expire at: 2025-04-18 14:05:14\n"
+      "Created upload with ID: 6806aa95647c3680875b6339\n",
+      "Upload will expire at: 2025-04-21 16:29:09\n"
      ]
     }
    ],
@@ -297,28 +297,28 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Uploading parts:  50%|██████████████▌              | 1/2 [00:00<00:00,  1.90it/s]"
+      "Uploading parts:  50%|██████████████              | 1/2 [00:00<00:00,  2.00it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Part 1/2 uploaded with ID: 6802945a01b9ebf23af9f563\n"
+      "Part 1/2 uploaded with ID: 6806aa968967dabeabba9ebd\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Uploading parts: 100%|█████████████████████████████| 2/2 [00:00<00:00,  2.37it/s]"
+      "Uploading parts: 100%|████████████████████████████| 2/2 [00:00<00:00,  2.20it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Part 2/2 uploaded with ID: 6802945aec668b6183defdd1\n"
+      "Part 2/2 uploaded with ID: 6806aa966f520bb3f2023acc\n"
      ]
     },
     {
@@ -331,7 +331,7 @@
    ],
    "source": [
     "def split_and_upload_parts(client, upload_id, file_path, num_parts=2):\n",
-    "    \"\"\"Split a file into a specific number of chunks and upload each chunk as a Part.\"\"\"\n",
+    "    \"\"\"Split a file into a specific number of chunks and upload each chunk as a part.\"\"\"\n",
     "    file_size = os.path.getsize(file_path)\n",
     "    part_size = math.ceil(file_size / num_parts)\n",
     "    \n",
@@ -425,7 +425,7 @@
      "text": [
       "Upload completed successfully!\n",
       "Status: completed\n",
-      "File ID: 6802945b8225fce1bc955193\n"
+      "File ID: 6806aa97b2cfbed2561aecf0\n"
      ]
     }
    ],
@@ -459,7 +459,7 @@
    "id": "batch-job-heading",
    "metadata": {},
    "source": [
-    "## Using the uploaded file for batch inference\n",
+    "## Use the uploaded file for batch inference\n",
     "\n",
     "Now that we've successfully uploaded our large file, let's use it to create a batch inference job."
    ]
@@ -474,7 +474,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Batch job created with ID: 6802945b186ab8d64b470716\n",
+      "Batch job created with ID: 6806aa976cdee70bad145125\n",
       "Status: pre_schedule\n"
      ]
     }
@@ -524,7 +524,7 @@
     {
      "data": {
       "text/plain": [
-       "'Output file ID: 680294c30c2f5a2a50225b20'"
+       "'Output file ID: 6806aadc694596f597839fe1'"
       ]
      },
      "metadata": {},
@@ -572,7 +572,7 @@
    "source": [
     "### Retrieve and process results\n",
     "\n",
-    "Once the batch job is completed, we can retrieve and process the results. Specifically, we’ll download the output file returned by the API and parse each line‑delimited JSON record into python objects, making it easy to inspect, validate, and visualize every response produced by the batch run."
+    "Once the batch job is completed, we can retrieve and process the results. Specifically, we’ll download the output file returned by the API and parse each line‑delimited JSON record into Python objects, making it easy to inspect, validate, and visualize every response produced by the batch run."
    ]
   },
   {
@@ -590,19 +590,19 @@
       "Sample of results:\n",
       "\n",
       "Result 1 (Custom ID: sample-0):\n",
-      "Climate change refers to the long-term warming of the planet due to an increase in average global temperatures. This is primarily caused by human activities such as burning fossil fuels (e.g., coal, oil, and gas), deforestation, and industrial processes, which release large amounts of carbon dioxide and other greenhouse gases into the atmosphere, trapping heat and leading to rising temperatures, more extreme weather events, and altered ecosystems.\n",
+      "Climate change is a global phenomenon caused by the increasing levels of greenhouse gases, such as carbon dioxide and methane, in the Earth's atmosphere. These gases trap heat from the sun, leading to a rise in global temperatures, changes in weather patterns, and more frequent extreme events like heatwaves, droughts, and storms. This is primarily driven by human activities like burning fossil fuels, deforestation, and industrial processes, which release large amounts of greenhouse gases into the atmosphere.\n",
       "\n",
       "Result 2 (Custom ID: sample-1):\n",
-      "Renewable energy refers to the energy generated from natural resources that can be replenished over time, such as sunlight, wind, rain, and geothermal heat. Examples of renewable energy sources include solar power, wind power, hydroelectric power, and biomass. These energy sources are sustainable, non-polluting, and endless, providing a cleaner alternative to fossil fuels and reducing greenhouse gas emissions that contribute to climate change.\n",
+      "Renewable energy is derived from natural resources that can be replenished over time, such as sunlight, wind, water, and geothermal heat. Unlike fossil fuels, renewable energy sources are sustainable and non-polluting, producing electricity or heat with minimal environmental impact. Examples of renewable energy include solar power, wind power, hydroelectric power, and biomass energy, which can be harnessed to power homes, industries, and transportation systems.\n",
       "\n",
       "Result 3 (Custom ID: sample-2):\n",
-      "Space exploration is the study and investigation of outer space, including planets, galaxies, and celestial objects. It involves sending spacecraft, such as satellites, probes, and manned missions, to gather data and conduct research on the characteristics of space and its various components. The primary goals of space exploration include expanding human knowledge, improving understanding of the universe, and potentially utilizing space resources for the benefit of humanity.\n",
+      "Space exploration is the ongoing effort to explore the universe beyond Earth's atmosphere, seeking to understand the mysteries of space and the planets within it. Through various missions, space agencies and private companies have successfully landed rovers on Mars, sent probes to distant planets and asteroids, and even established temporary human settlements in space, such as the International Space Station. The goal of space exploration is to expand our knowledge of the cosmos, unlock new technologies, and potentially one day establish a human presence beyond Earth.\n",
       "\n",
       "Result 4 (Custom ID: sample-3):\n",
-      "Quantum computing is a revolutionary technology that uses the principles of quantum mechanics to perform calculations and operations on data. Unlike classical computers, which use binary bits (0s and 1s), quantum computers use quantum bits or qubits, which can exist in multiple states simultaneously, allowing for exponentially faster processing of complex calculations and simulations. This enables quantum computers to solve problems that are currently unsolvable or require an unfeasible amount of time to solve on classical computers.\n",
+      "Quantum computing is a revolutionary technology that uses the principles of quantum mechanics to perform calculations and operations on data. Unlike traditional computers, which use bits to represent 0s and 1s, quantum computers use quantum bits or qubits, which can exist in multiple states simultaneously, allowing them to process vast amounts of information exponentially faster and more efficiently.\n",
       "\n",
       "Result 5 (Custom ID: sample-4):\n",
-      "Artificial intelligence (AI) refers to the development of computer systems that can perform tasks typically requiring human intelligence, such as learning, problem-solving, decision-making, and perception. These systems use algorithms and data to mimic human-like behavior, enabling machines to process and analyze vast amounts of information, recognize patterns, and make predictions or take actions autonomously.\n"
+      "Artificial intelligence (AI) refers to the development of computer systems that can perform tasks typically requiring human intelligence, such as learning, problem-solving, decision-making, and perception. AI systems use algorithms and data to analyze and understand complex information, enabling them to make predictions, classify objects, and automate tasks, ultimately simulating human-like behavior and intelligence.\n"
      ]
     }
    ],
@@ -661,7 +661,7 @@
    "id": "cancel-upload-heading",
    "metadata": {},
    "source": [
-    "## Handling failed uploads\n",
+    "## Handle failed uploads\n",
     "\n",
     "Sometimes, uploads may fail for various reasons. In such cases, you may want to cancel the upload and start over. Here's how to cancel an upload:"
    ]
@@ -800,21 +800,21 @@
       "## PARALLEL UPLOAD DEMONSTRATION ##\n",
       "\n",
       "Creating a new upload for parallel demonstration...\n",
-      "Created upload with ID: 680294cc8225fce1bc95551c\n",
-      "Upload will expire at: 2025-04-18 14:07:08\n",
+      "Created upload with ID: 6806aadfb2cfbed2561aeea9\n",
+      "Upload will expire at: 2025-04-21 16:30:23\n",
       "\n",
       "Uploading parts in parallel...\n",
       "Uploading file in 2 parts using up to 2 parallel workers\n",
-      "Part 2/2 uploaded with ID: 680294cc186ab8d64b470a84\n",
-      "Part 1/2 uploaded with ID: 680294ccd82e57647b83d47c\n",
+      "Part 1/2 uploaded with ID: 6806aae0fd88d31a6f21d200\n",
+      "Part 2/2 uploaded with ID: 6806aae06cdee70bad1452ac\n",
       "\n",
       "Completing the parallel upload...\n",
       "Upload completed successfully!\n",
       "Status: completed\n",
-      "File ID: 680294cc8cc246574d983f58\n",
+      "File ID: 6806aae0d6646988da98c092\n",
       "\n",
       "Parallel upload demonstration completed!\n",
-      "Parallel uploaded file ID: 680294cc8cc246574d983f58\n",
+      "Parallel uploaded file ID: 6806aae0d6646988da98c092\n",
       "Note: This file was uploaded just for demonstration purposes.\n"
      ]
     }
