--- a/tutorials/klusterai-api/uploads-api.ipynb
+++ b/tutorials/klusterai-api/uploads-api.ipynb
@@ -431,7 +431,7 @@
    ],
    "source": [
     "def complete_upload(client, upload_id, parts):\n",
-    "    \"\"\"Complete the Upload process with the ordered list of Part IDs.\"\"\"\n",
+    "    \"\"\"Complete the upload process with the ordered list of part IDs.\"\"\"\n",
     "    part_ids = [part.id for part in parts]\n",
     "    \n",
     "    params = {\n",
@@ -706,7 +706,7 @@
    "id": "advanced-section",
    "metadata": {},
    "source": [
-    "## Advanced: implementing parallel uploads\n",
+    "## Advanced: implement parallel uploads\n",
     "\n",
     "For very large files, uploading parts sequentially might take a long time. You can implement a version that uploads parts in parallel using Python's `concurrent.futures` module. This approach creates a thread pool that allows multiple parts to be uploaded simultaneously, significantly reducing the total upload time for large files over high-bandwidth connections.\n",
     "\n",
