--- a/tutorials/klusterai-api/effective-prompt-engineering.ipynb
+++ b/tutorials/klusterai-api/effective-prompt-engineering.ipynb
@@ -1,12 +1,20 @@
 {
  "cells": [
+   {
+   "cell_type": "markdown",
+   "id": "intro-heading",
+   "metadata": {},
+   "source": [
+    "# Effective prompt engineering with the kluster.ai API\n",
+    "\n",
+    "[![Open in Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/kluster-ai/klusterai-cookbook/blob/main/examples/effective-prompt-engineering.ipynb)"
+   ]
+  },
   {
    "cell_type": "markdown",
    "id": "b26c7677",
    "metadata": {},
    "source": [
-    "# Effective prompt engineering with the kluster.ai API\n",
-    "\n",
     "Prompt engineering is the practice of crafting inputs to guide large language models (LLMs) toward high‑quality responses. Well‑designed prompts can turn vague outputs into precise, actionable insights.\n",
     "\n",
     "In this notebook, we show how prompt quality affects LLM performance by comparing three levels of prompts—Bad, Better, and Best—in a retail sales analysis scenario. The goal: uncover strategies to grow the business and boost profits.\n",
