Apply suggestions from code review
Co-authored-by: Kevin Neilson <kevin@papermoon.io>

--- a/tutorials/klusterai-api/model-comparison.ipynb
+++ b/tutorials/klusterai-api/model-comparison.ipynb
@@ -23,9 +23,9 @@
       "id": "1297a26a-fdb2-48b4-bc1e-d66ec0b40acc",
       "metadata": {},
       "source": [
-        "How can you know which LLM is better for a given task? Choosing the right LLM for your specific use case is crucial but challenging. While larger models might offer better performance, they often come with higher costs.\n",
+        "How can you know which LLM is better for a given task? Choosing the right LLM for your specific use case is crucial but challenging. While larger models generally offer better performance, they often come with higher costs.\n",
         "\n",
-        "This tutorial walks through a notebook where you'll learn how to systematically evaluate Language Models (LLMs) using the <a href=\"https://kluster.ai/\" target=\"_blank\">kluster.ai</a> batch API, showcasing a practical example of comparing different models for a real-world task. The systematic evaluation pipeline:\n",
+        "This tutorial walks through a notebook where you'll learn how to systematically evaluate Large Language Models (LLMs) using the <a href=\"https://kluster.ai/\" target=\"_blank\">kluster.ai</a> batch API, showcasing a practical example of comparing different models for a real-world task. The systematic evaluation pipeline does the following:\n",
         "\n",
         "1. Loads and processes a public dataset (which you can later replace with your own)\n",
         "2. Tests three state-of-the-art models on a text classification task\n",
