Apply suggestions from code review
Co-authored-by: Lucas Malizia <131050418+0xlukem@users.noreply.github.com>

--- a/tutorials/klusterai-api/model-comparison.ipynb
+++ b/tutorials/klusterai-api/model-comparison.ipynb
@@ -88,7 +88,7 @@
       "id": "5273d66b-c958-48b0-b6a2-a8bad93bd5ca",
       "metadata": {},
       "source": [
-        "Next, ensure you've installed OpenAI Python library:"
+        "Next, ensure you've installed the OpenAI Python library:"
       ]
     },
     {
@@ -865,7 +865,7 @@
         "- Gemma 3 27B:\n",
         "  - Accuracy: 82.9% ✅\n",
         "  - Total tokens used: 145,796 (143,579 input / 2,217 output)\n",
-        "  -   - Best overall ratio between cost-efficiency and accuracy\n",
+        "  - Best overall ratio between cost-efficiency and accuracy\n",
         "\n",
         "\n",
         "Each model was evaluated using the same set of 1000 movie overviews, with genre predictions compared against annotated ground-truth genres. Total input and output tokens were recorded and converted into USD using published prices per 1M tokens.\n",
