Apply suggestions from code review
Co-authored-by: Kevin Neilson <kevin@papermoon.io>

--- a/tutorials/klusterai-api/model-comparison.ipynb
+++ b/tutorials/klusterai-api/model-comparison.ipynb
@@ -167,7 +167,7 @@
         "\n",
         "Now that you've initialized an OpenAI-compatible client pointing to kluster.ai, we can talk about the data.\n",
         "\n",
-        "This notebook is a dataset from the Top 1000 IMDb Movies dataset, which contains descriptions and genres for each movie. In some cases, a movie can have more than one label. When calculating the accuracy, we'll consider the prediction correct if the predicted genre matches at least one of the genres listed in the dataset, the ground truth. This ground truth allows the notebook to calculate the accuracy and measure how well a given LLM has performed.\n"
+        "This notebook uses a dataset from the Top 1000 IMDb Movies dataset, which contains descriptions and genres for each movie. In some cases, a movie can have more than one label. When calculating the accuracy, we'll consider the prediction correct if the predicted genre matches at least one of the genres listed in the dataset, the ground truth. This ground truth allows the notebook to calculate the accuracy and measure how well a given LLM has performed.\n"
       ]
     },
     {
@@ -287,7 +287,7 @@
       "source": [
         "# System prompt\n",
         "SYSTEM_PROMPT = \"\"\"\n",
-        "    You are a helpful assitant that classifies movie genres based on the movie description. Your response must be one of these exact words and nothing else: \n",
+        "    You are a helpful assistant that classifies movie genres based on the movie description. Your response must be one of these exact words and nothing else: \n",
         "    Action, Adventure, Animation, Biography, Comedy, Crime, Drama, Family, Fantasy, Film-Noir, History, Horror, Music, Musical, Mystery, Romance, Sci-Fi, Sport, Thriller, War, Western.\n",
         "    Respond with ONE WORD ONLY. No punctuation, no explanation, no formatting. Just the genre.\n",
         "    \"\"\"\n",
@@ -303,7 +303,7 @@
         "# Ensure the directory exists\n",
         "os.makedirs(\"model_comparison\", exist_ok=True)\n",
         "\n",
-        "# Create the batch job file with the prompt and content for the model and the image\n",
+        "# Create the batch job file with the prompt and content for the model\n",
         "def create_batch_file(model):\n",
         "    batch_requests = []\n",
         "    \n",
@@ -379,7 +379,7 @@
       "id": "8330a06b-12ec-4cb5-984c-e89a0edbda2f",
       "metadata": {},
       "source": [
-        "Next, we can preview what one of the request in a batch job files looks like:"
+        "Next, we can preview what one of the requests in a batch job files looks like:"
       ]
     },
     {
@@ -830,7 +830,7 @@
         "\n",
         "Llama 4 Scout 17B showed worse accuracy (79.8%) than Maverick but at a higher price point ($0.1165). This model might be appropriate in other scenarios where it can yield better results, such as tasks involving ambiguity or subtle classification differences. However, its cost-efficiency ratio lags behind both Maverick and Gemma.\n",
         "\n",
-        "DeepSeek V3 0324 similar accuracy of both Maverick and Scout, while also incurring the highest cost ($0.0992), suggesting that in this specific context, it may not be the most competitive choice when weighed against either cost or performance alone. \n",
+        "DeepSeek V3 0324 had a similar accuracy to both Maverick and Scout, while also incurring the highest cost ($0.0992), suggesting that in this specific context, it may not be the most competitive choice when weighed against either cost or performance alone. \n",
         "\n",
         "That said, these results should not be generalized without further testing on different types of tasks and prompts, as they are limited to the dataset and classification task used (genre classification using movie overviews from the IMDb Top 1000 dataset). The models may behave differently on other types of content (for example, dialogue-heavy text, short prompts, technical content), and their relative performance could shift depending on task complexity, prompt structure, or label distribution."
       ]
@@ -842,7 +842,7 @@
       "source": [
         "## Summary\n",
         "\n",
-        "This tutorial used the chat completion endpoint to perform genre classification on movie descriptions from the IMDb Top 1000 dataset using the `kluster.ai` batch API. We tested four models, comparing them based on accuracy, token usage, and cost:\n",
+        "This tutorial used the chat completion endpoint to perform genre classification on movie descriptions from the IMDb Top 1000 dataset using the kluster.ai batch API. We tested four models, comparing them based on accuracy, token usage, and cost:\n",
         "\n",
         "- DeepSeek V3 0324:\n",
         "  - Accuracy: 80.7%\n",
@@ -872,7 +872,7 @@
         "\n",
         "To submit and evaluate the batch jobs, we:\n",
         "\n",
-        "1. Created the JSONL file, where each file line represented a separate request. We provided the images as URLs from GitHub\n",
+        "1. Created the JSONL file, where each file line represented a separate request\n",
         "2. Submitted the file to the platform\n",
         "3. Started the batch job, and monitored its progress\n",
         "4. Once completed, we fetched the results\n",
