updated llm as judge

--- a/tutorials/klusterai-api/model-comparison.ipynb
+++ b/tutorials/klusterai-api/model-comparison.ipynb
@@ -70,7 +70,7 @@
       "metadata": {},
       "outputs": [
         {
-          "name": "stdin",
+          "name": "stdout",
           "output_type": "stream",
           "text": [
             "Enter your kluster.ai API key:  ········\n"
@@ -280,7 +280,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "id": "e65f49e2-379e-403d-b355-7e38bb6f25c5",
       "metadata": {},
       "outputs": [],
@@ -305,7 +305,7 @@
         "\n",
         "# Create the batch job file with the prompt and content for the model\n",
         "def create_batch_file(model):\n",
-        "    batch_requests = []\n",
+        "    batch_list = []\n",
         "    \n",
         "    for index, row in df.iterrows():\n",
         "        content = row[\"Overview\"]\n",
@@ -324,16 +324,16 @@
         "            },\n",
         "        }\n",
         "        \n",
-        "        batch_requests.append(request)\n",
+        "        batch_list.append(request)\n",
         "\n",
-        "    return batch_requests\n",
+        "    return batch_list\n",
         "\n",
         "\n",
         "# Save file\n",
-        "def save_batch_file(batch_requests, model):\n",
+        "def save_batch_file(batch_list, model):\n",
         "    filename = f\"model_comparison/batch_job_{model}_request.jsonl\"\n",
         "    with open(filename, \"w\") as file:\n",
-        "        for request in batch_requests:\n",
+        "        for request in batch_list:\n",
         "            file.write(json.dumps(request) + \"\\n\")\n",
         "    return filename\n"
       ]
